--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <hr/>  <!--nebruksniuota linija-->
         <p>
             <img src="ft.jpg" alt="Profilis" width="" height=""/>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid aperiam consectetur consequatur
+            Lorem ipsum dolor sit amet, consectetur adipisicing elgggit. Adipisci aliquid aperiam consectetur consequatur
             debitis delectus deleniti, deserunt doloremque enim esse excepturi exercitationem facilis fugiat illo,
             incidunt iste modi molestiae nisi odit officia optio reiciendis sint totam vitae voluptas. Accusantium
             aperiam assumenda at dicta nemo, pariatur quisquam suscipit voluptate voluptates? Asperiores consectetur hic
