--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Pradzia</title>
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="css/testas.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/dizainas.css">
 </head>
 <body>
 
