--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/dizainas.css">
+    <link rel="stylesheet" href="css/animacijos.css">
 </head>
 <body>
 
 <header>
     <nav class="top">
+        <img class="logo" src="pav.jpg" alt="" width="" height=""/>
         <a href="/">Pradzia</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="kontaktai.html">Kontaktai</a>
@@ -16,11 +20,17 @@
 </header>
 <main>
     <div class="content">
-        <header>
-            <h1>portfolio</h1>
+        <header class="content">
+            <h1>[C#][JAVA][WEB]</h1>
         </header>
-       portfolio
+        <hr/>
+
+        <p> portfoliossdsd</p>
     </div>
+    <div class="content">
+        <h1>Csdsdssds</h1>
+    </div>
+
 </main>
 <footer>
     <span>2018&copy; visos teises saugomos</span>   <!--tekstas-->
