--- a/kontaktai.html
+++ b/kontaktai.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>kontaktai</title>
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="//reset.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/dizainas.css">
 </head>
 <body>
 
